// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gap[Base] should render correctly  1`] = `
<div
  class="c-rjklyz soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; width: 400px;"
>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about align 1`] = `
<div
  class="cjfqess soui-radio-group"
>
  <div
    class="cjemrls soui-radio-wrapper cfiorpj soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      flex-start
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      center
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      flex-end
    </span>
  </div>
  <div
    class="cjemrls soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ckav5h3 soui-radio-indicator-wrapper"
    >
      <span
        class="cs2ee7w soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-t5tqm4 soui-radio-desc"
    >
      baseline
    </span>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about custom 1`] = `
<div
  style="display: flex; align-items: center; margin-bottom: 16px;"
>
  <div
    style="width: 80px;"
  >
    column:
  </div>
  <div
    class="cciu9my soui-slider-wrapper"
    style="flex: 1;"
  >
    <div
      class="c-l3j7em soui-slider-track"
    >
      <div
        class="c-cur970 soui-slider-track-inner"
        style="left: 0%; right: 92%;"
      >
        <div
          class="cja3v2e soui-slider-indicator c-xv4ykr soui-slider-indicator-end"
        />
        <div
          class="cot5kzj soui-slider-end-value c-l2q8ew soui-slider-value"
        >
          8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about vertical 1`] = `
<div
  class="c-rjklyz soui-gap-wrapper"
  style="margin-bottom: -10px; margin-right: -8px; width: 400px; flex-direction: column;"
>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="cl9731d soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;
